--- a/login.html
+++ b/login.html
@@ -49,7 +49,8 @@
                     </div>
                 </div>
                 <div class="col-12 text-center my-5">
-                    <button type="submit" class="auth-btn">Sign in</button>
+                    <a class="auth-btn d-block" href="todays-match.html">Sign In</a>
+                    <!-- <button type="submit" class="auth-btn">Sign in</button> -->
                 </div>
                 <div class="col-12 text-center mb-5">
                     <p>Don't have an account ? <a href="signup.html">Create</a></p>
