--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
     <div id="preloader">
         <div class="preloader-circle"></div>
     </div>
-    <div class="auth-wrap">
+    <div class="auth-wrap container">
         <h3 class="auth-title text-center py-5">
             Login
         </h3>
