--- a/my-match.html
+++ b/my-match.html
@@ -32,7 +32,7 @@
                         </a>
                     </div>
                     <div>
-                        <a href="notification.html">
+                        <a class="notification-item" href="notification.html">
                             <i class="ri-notification-line"></i>
                         </a>
                     </div>
