--- a/todays-match.html
+++ b/todays-match.html
@@ -81,7 +81,7 @@
                                 <div class="tinder--user-dp" style="background-image: url('assets/images/user/5.png');">
                                 </div>
                                 <div class="tinder--user-info">
-                                    <a href="user-profile.html">
+                                    <a href="user-dashboard.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
@@ -92,7 +92,7 @@
                                 <div class="tinder--user-dp" style="background-image: url('assets/images/user/1.png');">
                                 </div>
                                 <div class="tinder--user-info">
-                                    <a href="user-profile.html">
+                                    <a href="user-dashboard.html">
                                         <h3>Abigall</h3>
                                     </a>
                                     <p>Cape Town</p>
@@ -132,7 +132,7 @@
                                     <i class="ri-send-plane-line"></i>
                                 </div>
                             </a>
-                            <a href="profile.html">
+                            <a href="dashboard.html">
                                 <div class="menu-item">
                                     <i class="ri-user-line"></i>
                                 </div>
