--- a/spotlight.html
+++ b/spotlight.html
@@ -141,7 +141,7 @@
                                     <i class="ri-send-plane-line"></i>
                                 </div>
                             </a>
-                            <a href="profile.html">
+                            <a href="dashboard.html">
                                 <div class="menu-item">
                                     <i class="ri-user-line"></i>
                                 </div>
