--- a/signup.html
+++ b/signup.html
@@ -74,8 +74,9 @@
                     </div>
 
                 </div>
-                <div class="col-12 text-center my-5">
-                    <button type="submit" class="auth-btn">Next</button>
+                <div class="col-12 text-center mb-5">
+                    <a href="signup-2.html" class="auth-btn d-block text-center">Next</a>
+                    <!-- <button type="submit" class="auth-btn">Next</button> -->
                 </div>
             </form>
         </div>
