--- a/signup-2.html
+++ b/signup-2.html
@@ -20,84 +20,42 @@
         <div class="preloader-circle"></div>
     </div>
     <div class="auth-wrap">
-        <h3 class="auth-title text-center py-5">
-            Register
-        </h3>
         <div class="auth-form container">
-            <form class="row g-3 px-3">
-                <div class="col-12 position-relative">
-                    <input type="text" placeholder="Username" class="auth-input" id="">
-                    <img src="assets/images/icon/user.svg" width="23" height="23" alt="">
-                </div>
-                <div class="col-12 position-relative">
-                    <input type="email" placeholder="Email" class="auth-input" id="">
-                    <img src="assets/images/icon/email.svg" width="23" height="23" alt="">
-                </div>
-                <div class="col-12 position-relative">
-                    <input type="password" placeholder="Password" class="auth-input" id="">
-                    <img src="assets/images/icon/lock.svg" width="23" height="23" alt="">
-                </div>
-                <div class="col-12 position-relative">
-                    <input type="password" placeholder="Confirm Password" class="auth-input" id="">
-                    <img src="assets/images/icon/lock.svg" width="23" height="23" alt="">
-                </div>
-
-                <div class="col-12 d-flex align-items-center flex-column">
-                    <!-- i'm  -->
-                    <div class="mb-4 text-center">
-                        <label class="im-title" for="im">I'm</label>
-                        <div class="center-align">
-                            <input type="radio" name="size" id="size_1" value="small" checked="">
-                            <label class="label man" for="size_1">
-                                <span class="blueBg">
-                                    <img src="assets/images/icon/boy.svg" alt="" width="84" height="84">
-                                </span>
-                                Man
-                            </label>
-
-                            <input class="ms-2" type="radio" name="size" id="size_2" value="small">
-                            <label class="label woman" for="size_2">
-                                <span class="blueBg">
-                                    <img src="assets/images/icon/woman.svg" alt="" width="84" height="84">
-                                </span>
-                                Woman
-                            </label>
-                        </div>
+            <form>
+                <div class="d-flex justify-content-between flex-column h-100vh align-items-center">
+                    <div>
+                        <h3 class="auth-title text-center pt-5">
+                            Become one <br>
+                            of Many!
+                        </h3>
                     </div>
 
-                    <!-- Intersted  -->
 
-                    <div class="text-center">
-                        <label class="im-title" for="im">Interested in</label>
-                        <div class="center-align">
-                            <input type="radio" name="size-2" id="size_3" value="small" checked="">
-                            <label class="label man" for="size_3">
-                                <span class="blueBg">
-                                    <img src="assets/images/icon/boy.svg" alt="" width="84" height="84">
-                                </span>
-                                Man
-                            </label>
-
-                            <input class="ms-2" type="radio" name="size-2" id="size_4" value="small">
-                            <label class="label woman" for="size_4">
-                                <span class="blueBg">
-                                    <img src="assets/images/icon/woman.svg" alt="" width="84" height="84">
-                                </span>
-                                Woman
-                            </label>
+                    <div class="row g-3 px-3">
+                        <div class="col-12 position-relative">
+                            <input type="text" placeholder="Username" class="auth-input" id="">
+                            <img src="assets/images/icon/user.svg" width="23" height="23" alt="">
+                        </div>
+                        <div class="col-12 position-relative">
+                            <input type="email" placeholder="Email" class="auth-input" id="">
+                            <img src="assets/images/icon/email.svg" width="23" height="23" alt="">
+                        </div>
+                        <div class="col-12 position-relative">
+                            <input type="password" placeholder="Password" class="auth-input" id="">
+                            <img src="assets/images/icon/lock.svg" width="23" height="23" alt="">
+                        </div>
+                        <div class="col-12 position-relative">
+                            <input type="password" placeholder="Confirm Password" class="auth-input" id="">
+                            <img src="assets/images/icon/lock.svg" width="23" height="23" alt="">
                         </div>
                     </div>
-
-                </div>
-
-                <div class="col-12 text-center my-5">
-                    <button type="submit" class="auth-btn">Register</button>
-                </div>
-                <div class="col-12 text-center mb-5">
-                    <p>Already have an account ? <a href="login.html">Login</a></p>
-                </div>
+                    <div class="col-12 text-center mb-5">
+                        <a href="signup-3.html" class="auth-btn d-block text-center">Next</a>
+                        <!-- <button type="submit" class="auth-btn">Register</button> -->
+                    </div>
             </form>
         </div>
+    </div>
     </div>
 
     <!-- ==== Script File ==== -->
