--- a/dashboard.html
+++ b/dashboard.html
@@ -46,21 +46,26 @@
                         <div class="col-12">
                             <div class="dashboard-inner-widget p-3">
                                 <ul>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/heart.svg" alt="">
+                                    <li><a href="connection.html"><img src="assets/images/icon/dashboard/heart.svg"
+                                                alt="">
                                             Connection</a></li>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/eye.svg" alt="">
+                                    <li><a href="visitors.html"><img src="assets/images/icon/dashboard/eye.svg" alt="">
                                             Visitors</a></li>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/social-network.svg" alt="">
+                                    <li><a href="likedme.html"><img
+                                                src="assets/images/icon/dashboard/social-network.svg" alt="">
                                             Liked me</a></li>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/star.svg" alt="">
+                                    <li><a href="favourites.html"><img src="assets/images/icon/dashboard/star.svg"
+                                                alt="">
                                             Favourites</a></li>
                                 </ul>
                             </div>
                             <div class="dashboard-inner-widget p-3">
                                 <ul>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/link.svg" alt="">
+                                    <li><a href="referrals.html"><img src="assets/images/icon/dashboard/link.svg"
+                                                alt="">
                                             Referrals</a></li>
-                                    <li><a href=""><img src="assets/images/icon/dashboard/settings.svg" alt="">
+                                    <li><a href="settings.html"><img src="assets/images/icon/dashboard/settings.svg"
+                                                alt="">
                                             Settings</a></li>
                                 </ul>
                             </div>
