Edit Profile menu page

--- a/dashboard.html
+++ b/dashboard.html
@@ -49,12 +49,13 @@
                                     <li><a href="connection.html"><img src="assets/images/icon/dashboard/heart.svg"
                                                 alt="">
                                             Connection</a></li>
-                                    <li><a href="visitors.html"><img src="assets/images/icon/dashboard/eye.svg" alt="">
+                                    <li><a href="connection.html"><img src="assets/images/icon/dashboard/eye.svg"
+                                                alt="">
                                             Visitors</a></li>
-                                    <li><a href="likedme.html"><img
+                                    <li><a href="connection.html"><img
                                                 src="assets/images/icon/dashboard/social-network.svg" alt="">
                                             Liked me</a></li>
-                                    <li><a href="favourites.html"><img src="assets/images/icon/dashboard/star.svg"
+                                    <li><a href="connection.html"><img src="assets/images/icon/dashboard/star.svg"
                                                 alt="">
                                             Favourites</a></li>
                                 </ul>
