Search result , my pef, edit pws 2 , change pws into your self done

--- a/change-pws.html
+++ b/change-pws.html
@@ -48,25 +48,30 @@
             <div class="col-12">
                 <!-- Main Content Start  -->
                 <div class="main-content mt-3">
-                    <div class="edit-profile-wrap">
-                        <div class="edit-profile-item">
-                            <ul>
-                                <li><a href="edit-profile-2.html"><img src="assets/images/icon/edit-profile/pencil.svg"
-                                            alt=""> Edit Profile</a></li>
-                                <li><a href="change-pws.html"><img src="assets/images/icon/edit-profile/key.svg"
-                                            alt=""> Change password</a></li>
-                                <li><a href="introduce-yourself.html"><img
-                                            src="assets/images/icon/edit-profile/user-pen.svg" alt=""> Introduce
-                                        yourself</a></li>
-                                <li><a href="my-preferences.html"><img
-                                            src="assets/images/icon/edit-profile/user-gear.svg" alt="">
-                                        My preferences</a></li>
-                                <li><a href="photo-manager.html"><img
-                                            src="assets/images/icon/edit-profile/mode-landscape.svg" alt="">Photo
-                                        manager</a></li>
-                            </ul>
+                    <form action="" class="change-pws-wrap">
+                        <div class="row g-3 px-3">
+                            <div class="col-12 position-relative">
+                                <input type="text" placeholder="Username" class="auth-input" id="">
+                                <img src="assets/images/icon/user.svg" alt="" width="23" height="23">
+                            </div>
+                            <div class="col-12 position-relative">
+                                <input type="email" placeholder="Email" class="auth-input" id="">
+                                <img src="assets/images/icon/email.svg" alt="" width="23" height="23">
+                            </div>
+                            <div class="col-12 position-relative">
+                                <input type="password" placeholder="Password" class="auth-input" id="">
+                                <img src="assets/images/icon/lock.svg" alt="" width="23" height="23">
+                            </div>
+                            <div class="col-12 position-relative">
+                                <input type="password" placeholder="Confirm Password" class="auth-input" id="">
+                                <img src="assets/images/icon/lock.svg" alt="" width="23" height="23">
+                            </div>
+                            <div class="col-12 text-center my-5">
+                                <!-- <a href="signup-3.html" class="auth-btn d-block text-center">Next</a> -->
+                                <button type="submit" class="auth-btn">Update</button>
+                            </div>
                         </div>
-                    </div>
+                    </form>
                 </div>
                 <!-- Footer Menu Start  -->
                 <div class="footer-bg">
