--- a/edit-profile-2.html
+++ b/edit-profile-2.html
@@ -49,22 +49,21 @@
                 <!-- Main Content Start  -->
                 <div class="main-content mt-3">
                     <div class="edit-profile-wrap">
-                        <div class="edit-profile-item">
-                            <ul>
-                                <li><a href="edit-profile-2.html"><img src="assets/images/icon/edit-profile/pencil.svg"
-                                            alt=""> Edit Profile</a></li>
-                                <li><a href="change-pws.html"><img src="assets/images/icon/edit-profile/key.svg"
-                                            alt=""> Change password</a></li>
-                                <li><a href="introduce-yourself.html"><img
-                                            src="assets/images/icon/edit-profile/user-pen.svg" alt=""> Introduce
-                                        yourself</a></li>
-                                <li><a href="my-preferences.html"><img
-                                            src="assets/images/icon/edit-profile/user-gear.svg" alt="">
-                                        My preferences</a></li>
-                                <li><a href="photo-manager.html"><img
-                                            src="assets/images/icon/edit-profile/mode-landscape.svg" alt="">Photo
-                                        manager</a></li>
-                            </ul>
+                        <div class="edit-profile-dp" style="background-image: url('assets/images/user/2.png');">
+                            <button type="button">
+                                <label for="fileInput">
+                                    <i class="ri-add-line"></i>
+                                </label>
+                                <input type="file" name="photo" id="fileInput">
+                            </button>
+                        </div>
+                        <div class="edit-profile-btn text-center mt-3">
+                            <button>
+                                Upload
+                            </button>
+                            <button>
+                                Privacy
+                            </button>
                         </div>
                     </div>
                 </div>
